Resolve compile issues